
  API CHANGES:

    * ``ProgressBarStack`` is deprecated; instead use
      ``ui_factory.nested_progress_bar`` to create new progress bars.

    * ForeignVcsMapping() now requires a ForeignVcs object as first
      argument. (Jelmer Vernooij)

    * ForeignVcsMapping.show_foreign_revid() has been moved to
      ForeignVcs. (Jelmer Vernooij)

    * The progress and UI classes have changed; the main APIs remain the
      same but code that provides a new UI or progress bar class may
      need to be updated.  (Martin Pool)

  TESTING:

  INTERNALS:

    * Default User Interface (UI) is CLIUIFactory when bzr runs in a dumb
      terminal. It is sometimes desirable do override this default by forcing
      bzr to use TextUIFactory. This can be achieved by setting the
      BZR_USE_TEXT_UI environment variable (emacs shells, as opposed to
      compile buffers, are such an example).
      (Vincent Ladeuil)

    * New API ``Branch.iter_merge_sorted_revisions()`` that iterates over
      ``(revision_id, depth, revno, end_of_merge)`` tuples.
      (Ian Clatworthy)

    * New ``Branch.dotted_revno_to_revision_id()`` and
      ``Branch.revision_id_to_dotted_revno()`` APIs that pick the most
      efficient way of doing the mapping.
      (Ian Clatworthy)

    * Refactor cmd_serve so that it's a little easier to build commands that
      extend it, and perhaps even a bit easier to read.  (Jonathan Lange)

    * ``TreeDelta.show()`` now accepts a ``filter`` parameter allowing log
      formatters to retrict the output.
      (Vincent Ladeuil)


bzr 1.11 "Eyes up!" 2009-01-19
------------------------------

This first monthly release of Bazaar for 2009 improves Bazaar's operation
in Windows, Mac OS X, and other situations where file names are matched
without regard to capitalization: Bazaar tries to match the case of an
existing file.  This release of Bazaar also improves the efficiency of
Tortoise Windows Shell integration and lets it work on 64-bit platforms.
